tests/snapshots/lexer__punctuators.snap
---
source: tests/lexer.rs
expression: "tokens.collect::<Vec<_>>()"
---
[
    Ok(
        Token {
            kind: LeftParen,
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ),
    Ok(
        Token {
            kind: RightParen,
            span: Span {
                start: 1,
                end: 2,
            },
        },
    ),
    Ok(
        Token {
            kind: LeftBrace,
            span: Span {
                start: 2,
                end: 3,
            },
        },
    ),
    Ok(
        Token {
            kind: RightBrace,
            span: Span {
                start: 3,
                end: 4,
            },
        },
    ),
    Ok(
        Token {
            kind: Semicolon,
            span: Span {
                start: 4,
                end: 5,
            },
        },
    ),
    Ok(
        Token {
            kind: Comma,
            span: Span {
                start: 5,
                end: 6,
            },
        },
    ),
    Ok(
        Token {
            kind: Plus,
            span: Span {
                start: 6,
                end: 7,
            },
        },
    ),
    Ok(
        Token {
            kind: Minus,
            span: Span {
                start: 7,
                end: 8,
            },
        },
    ),
    Ok(
        Token {
            kind: Star,
            span: Span {
                start: 8,
                end: 9,
            },
        },
    ),
    Ok(
        Token {
            kind: BangEqual,
            span: Span {
                start: 9,
                end: 11,
            },
        },
    ),
    Ok(
        Token {
            kind: EqualEqual,
            span: Span {
                start: 11,
                end: 13,
            },
        },
    ),
    Ok(
        Token {
            kind: LessEqual,
            span: Span {
                start: 13,
                end: 15,
            },
        },
    ),
    Ok(
        Token {
            kind: GreaterEqual,
            span: Span {
                start: 15,
                end: 17,
            },
        },
    ),
    Ok(
        Token {
            kind: BangEqual,
            span: Span {
                start: 17,
                end: 19,
            },
        },
    ),
    Ok(
        Token {
            kind: Less,
            span: Span {
                start: 19,
                end: 20,
            },
        },
    ),
    Ok(
        Token {
            kind: Greater,
            span: Span {
                start: 20,
                end: 21,
            },
        },
    ),
    Ok(
        Token {
            kind: Slash,
            span: Span {
                start: 21,
                end: 22,
            },
        },
    ),
    Ok(
        Token {
            kind: Dot,
            span: Span {
                start: 22,
                end: 23,
            },
        },
    ),
]
